@@ -1,3 +1,8 @@
+Mon Aug  4 17:12:03 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/tests/ImplRepo/double_start/run_test.pl:
+          fix up the basic test so it works again.
+
 Fri Aug  1 21:01:55 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * orbsvcs/ImplRepo_Service/AsyncAccessManager.cpp:
